--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.10.0",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/native": "^5.2.4",
+    "@react-navigation/stack": "^5.2.19",
     "expo": "~37.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.1.0-rc.1",
     "redux": "^4.0.5",
