--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "HelloWorld",
+    "name": "metatron",
     "slug": "metatron",
     "platforms": [
       "ios",
@@ -14,6 +14,10 @@
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
+    },
+    "android": {
+      "package": "com.herc.metatron",
+      "versionCode": 1
     },
     "updates": {
       "fallbackToCacheTimeout": 0
