--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
+    "@use-expo/font": "^2.0.0",
     "expo": "~37.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -20,6 +21,8 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "11.0.1",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.1.0-rc.1",
     "redux": "^4.0.5",
