--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
     "@use-expo/font": "^2.0.0",
+    "crypto-js": "^4.0.0",
     "expo": "~37.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
