--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@use-expo/font": "^2.0.0",
     "crypto-js": "^4.0.0",
     "expo": "~37.0.3",
+    "expo-av": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
